Update bundle identifier in Manifest.plist

--- a/CloudFlareBuild/Manifest.plist
+++ b/CloudFlareBuild/Manifest.plist
@@ -27,7 +27,7 @@
 <key>metadata</key>
 <dict>
 <key>bundle-identifier</key>
-<string>net.pulsesecure.pulsesecure</string>
+<string>net.pulsesecure.pulsesecureenterprise</string>
 <key>bundle-version</key>
 <string>22.8.2.94913</string>
 <key>kind</key>
